--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ repositories {
     mavenCentral()
     maven { url "https://jitpack.io" }
     maven { url "http://first.wpi.edu/FRC/roborio/maven/release" }
-    maven { url "https://raw.githubusercontent.com/Open-RIO/Maven-Mirror/master/m2" }
+    maven { url "http://devsite.ctr-electronics.com/maven/release" }
     maven { url "https://www.kauailabs.com/maven2" }
 }
 
