--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ import java.text.SimpleDateFormat
 
 plugins {
     id "org.jetbrains.kotlin.jvm" version "1.3.20"
-    id "edu.wpi.first.GradleRIO" version "2019.3.2"
+    id "edu.wpi.first.GradleRIO" version "2019.4.1"
 }
 
 ext.kotlinVersion = "1.3.20"
@@ -24,6 +24,7 @@ repositories {
     maven { url "http://first.wpi.edu/FRC/roborio/maven/release" }
     maven { url "http://devsite.ctr-electronics.com/maven/release" }
     maven { url "https://www.kauailabs.com/maven2" }
+    maven { url "http://www.revrobotics.com/content/sw/max/sdk/maven/" }
 }
 
 configurations {
@@ -124,5 +125,5 @@ task versionTxt()  {
 }
 
 wrapper {
-    gradleVersion = "5.1"
+    gradleVersion = "5.0"
 }
